<resources>
    <string name="app_name">Fluffy</string>

    <string name="onBoarding_logo">Fluffy Logo</string>
    <string name="onBoarding_one_title">Gain total control of your money</string>
    <string name="onBoarding_two_title">Know where your money goes</string>
    <string name="onBoarding_three_title">Planning ahead</string>
    <string name="onBoarding_one_subtitle">Become your own money manager and make every cent count</string>
    <string name="onBoarding_two_subtitle">Track your transactions easily, with categories and financial report</string>
    <string name="onBoarding_three_subtitle">Setup your budget for each category so you in control</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account_info">Don\'t have an account yet? <b><u>Sign Up</u></b></string>
    <string name="password">Password</string>
    <string name="email_hint">Email</string>
    <string name="name">Name</string>
    <string name="existing_account_info">Already have an account? <b><u>Login</u></b></string>
    <string name="terms_info"><b>By signing up, you agree to Terms of Service and Privacy Policy</b></string>

    <string name="user_not_found">User not found. Please try again&#8230;</string>
    <string name="user_created">User created, try to Log In</string>
    <string name="email_occupied">Email is not available. Please use another email</string>

    <string name="double_press_to_exit">Press back button twice to exit the application</string>
    <string name="register_error_empty">empty!</string>
    <string name="user_balance">Account Balance</string>
    <string name="amount_income_pattern">+$%s</string>
    <string name="amount_outcome_pattern">-$%s</string>
    <string name="icon_income">icon_income</string>
    <string name="icon_outcome">icon_outcome</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="date_drop_down">date_drop_down</string>
    <string name="amount_text">$%s</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="food_icon">food_icon</string>
    <string name="add_new_expense">AddNewExpense</string>
    <string name="add_new_income">addNewIncome</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="moveBack">moveBack</string>
    <string name="how_much_label">How much?</string>
    <string name="default_value_zero">0</string>
    <string name="dollar_sign">$</string>
    <string name="description">description</string>
    <string name="add_attachment_label">Add attachment</string>
    <string name="repeat_label">Repeat</string>
    <string name="repeat_transaction">Repeat transaction</string>
    <string name="continue_text">Continue</string>

    <string name="add_new_income_label">INCOME</string>
    <string name="add_new_expense_label">EXPENSE</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="transaction_add_failure">Error while adding new transaction</string>
    <string name="unexpected_error_message">Unexpected error. Please try again&#8230;</string>
    <string name="transaction_add_success">"Add success!</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--> DEBUG Strings <-->
    <string name="simulate_10_notifications">Simulate 10 notifications</string>
    <string name="simulate_single_notifications">Simulate single notifications</string>

    <!--> Notifications <-->
    <string name="subscription_notification_title"><![CDATA[<b>%s subscription</b>]]></string>
    <string name="subscription_notification_content_text">Expire in less than 24h. Remember to renew or cancel your membership!</string>
    <string name="subscription_notification_summary_text">Subscriptions expire!</string>
    <string name="subscription_notification_summary_content_title">Your subscriptions will end soon. Please renew or cancel</string>

    <string-array name="months_of_year">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>