<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_fragment_host"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_medium_16"
        app:layout_constraintBottom_toTopOf="@id/onboarding_step_indicator"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/onboarding_step_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_16"
        app:layout_constraintBottom_toTopOf="@id/onboarding_register_button"
        app:tabBackground="@drawable/onboarding_tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboarding_register_button"
        style="@style/Theme.Fluffy.ButtonDefault"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_medium_16"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/onboarding_login_button"
        app:layout_constraintEnd_toEndOf="@id/onboarding_login_button"
        app:layout_constraintStart_toStartOf="@id/onboarding_login_button"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboarding_login_button"
        style="@style/Theme.Fluffy.ButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_medium_16"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
